# libsbx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  diff.txt  multiview_cascades.patch  tmp.diff
demo/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  renderer.cpp  renderer.hpp
demo/assets/data/: imgui.ini
demo/assets/fonts/: charset.txt  roboto_atlas.json  roboto_atlas.sbxtex
demo/assets/map/: borders.f32  heightmap.r16  province_ids.r32u  province_tints.f32  provinces.yaml
demo/assets/materials/: base.material.yaml  terrain.material.yaml
demo/assets/scenes/: empty.yaml  forrest.yaml  scene.yaml
demo/assets/shaders/: manifest.txt
demo/assets/textures/: base.sbxtex
demo/building/: building_definition.hpp  building_instance.hpp  road_placement.hpp  road_subrenderer.cpp  road_subrenderer.hpp  town.hpp  town_manager.hpp  zone_subrenderer.cpp  zone_subrenderer.hpp  zone_types.hpp
demo/demo/: application.cpp  application.hpp  data.hpp  demo.cpp  dual_grid.cpp  dual_grid.hpp  grid.hpp  renderer.cpp  renderer.hpp  terrain.hpp  terrain_generator.hpp  terrain_subrenderer.cpp  terrain_subrenderer.hpp  tmp.txt  vegetation.hpp  world.hpp
demo/demo/building/: building_definition.hpp  building_module.hpp  road_drawing.hpp  road_instance.hpp  road_mesh.hpp  road_placement.hpp  road_subrenderer.cpp  road_subrenderer.hpp  road_types.hpp  town.hpp  town_manager.hpp  zone_overlay.hpp
demo/demo/prototypes/: terrain_subrenderer.cpp  terrain_subrenderer.hpp  voronoi.hpp
demo/demo/simulation/: day_night_cycle.hpp  tick_clock.hpp
demo/demo/terrain/: border_subrenderer.cpp  border_subrenderer.hpp  chunk.hpp  grid.hpp  heightmap.hpp  pipeline.hpp  province_map.hpp  sculpt.hpp  splat_generator.hpp  terrain_interop.hpp  terrain_module.cpp  terrain_module.hpp  terrain_subrenderer.cpp  terrain_subrenderer.hpp  terrain_types.hpp  water_subrenderer.cpp  water_subrenderer.hpp
demo/scripts/: bake.py  generate.py
demo/simulation/: simulation_module.hpp
demo/terrain/: sculpt.hpp  splat_generator.hpp  terrain_module.cpp  terrain_module.hpp  terrain_subrenderer.hpp  water_subrenderer.hpp
editor/: .gitignore  CMakeLists.txt  README.md
editor/assets/: config.json
editor/assets/data/: editor.ini
editor/assets/shaders/: manifest.txt
editor/editor/: application.cpp  application.hpp  editor.cpp  editor_context.cpp  editor_context.hpp  editor_module.cpp  editor_module.hpp  editor_subrenderer.cpp  editor_subrenderer.hpp  renderer.cpp  renderer.hpp  selection.hpp
editor/editor/bindings/: imgui.hpp
editor/editor/filters/: selection_filter.cpp  selection_filter.hpp
editor/editor/panels/: asset_browser_panel.cpp  asset_browser_panel.hpp  attachment_panel.cpp  attachment_panel.hpp  component_registry.hpp  hierarchy_panel.cpp  hierarchy_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  log_panel.cpp  log_panel.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  texture_cache.cpp  texture_cache.hpp  viewport_panel.cpp  viewport_panel.hpp
editor/editor/widgets/: controls.cpp  controls.hpp  controls.ipp
libsbx-animations/: CMakeLists.txt
libsbx-animations/libsbx/animations/: animation.cpp  animations.cpp  animations.hpp  animations_module.cpp  animations_module.hpp  animator.cpp  animator.hpp  mesh.cpp  mesh.hpp  skeleton.cpp  skeleton.hpp  skinned_mesh_material_draw_list.hpp  skinned_mesh_material_subrenderer.cpp  skinned_mesh_material_subrenderer.hpp  skinned_mesh_shadow_subrenderer.cpp  skinned_mesh_shadow_subrenderer.hpp  skinned_mesh_subrenderer.cpp  skinned_mesh_subrenderer.hpp  skinning_task.cpp  skinning_task.hpp  spline.hpp  version.hpp  vertex3d.hpp
libsbx-core/: CMakeLists.txt
libsbx-core/libsbx/core/: application.hpp  concepts.hpp  core.cpp  core.hpp  delegate.hpp  engine.cpp  engine.hpp  entry_point.cpp  module.hpp  profiler.hpp  settings.hpp  version.hpp
libsbx-ecs/: CMakeLists.txt
libsbx-ecs/libsbx/ecs/: ecs.hpp  entity.hpp  registry.hpp  sparse_set.hpp  storage.hpp  storage.ipp  version.hpp
libsbx-ecs/tests/: CMakeLists.txt  tests.cpp
libsbx-editor/: CMakeLists.txt
libsbx-editor/libsbx/editor/: dialog.hpp  editor.cpp  editor.hpp  editor_subrenderer.cpp  editor_subrenderer.hpp  fonts.hpp  hierarchy_panel.cpp  hierarchy_panel.hpp  log_panel.cpp  log_panel.hpp  menu_bar.hpp  nodes_panel.cpp  nodes_panel.hpp  pipeline.hpp  profiler.hpp  profiler_panel.cpp  profiler_panel.hpp  property_panel.cpp  property_panel.hpp  themes.cpp  themes.hpp  version.hpp
libsbx-math/: CMakeLists.txt
libsbx-math/libsbx/math/: algorithm.hpp  algorithm.ipp  angle.hpp  box.hpp  color.cpp  color.hpp  concepts.hpp  constants.hpp  fwd.hpp  math.cpp  math.hpp  matrix.hpp  matrix.ipp  matrix3x3.hpp  matrix3x3.ipp  matrix4x4.hpp  matrix4x4.ipp  matrix_cast.cpp  matrix_cast.hpp  noise.hpp  plane.hpp  quaternion.hpp  quaternion.ipp  random.hpp  ray.hpp  sphere.hpp  traits.hpp  uuid.cpp  uuid.hpp  vector.hpp  vector.ipp  vector2.hpp  vector2.ipp  vector3.hpp  vector3.ipp  vector4.hpp  vector4.ipp  version.hpp  volume.hpp
libsbx-math/tests/: CMakeLists.txt  tests.cpp  vector2_tests.hpp
libsbx-memory/benchmarks/: CMakeLists.txt  benchmarks.cpp
libsbx-scenes/: CMakeLists.txt
libsbx-scenes/libsbx/scenes/: asset_io.hpp  asset_registry.hpp  component_io.hpp  debug_subrenderer.hpp  grid_subrenderer.hpp  hierarchy_module.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  scene_asset_table.hpp  scene_environment.cpp  scene_environment.hpp  scene_graph.hpp  scene_serializer.cpp  scene_serializer.hpp  scenes.hpp  scenes_module.cpp  scenes_module.hpp  skybox_subrenderer.hpp  version.hpp  version.hpp.in
libsbx-scenes/tests/: CMakeLists.txt  tests.cpp
libsbx-units/: CMakeLists.txt
libsbx-units/libsbx/units/: bytes.hpp  distance.hpp  mass.hpp  quantity.hpp  units.cpp  units.hpp  version.hpp
tests/: CMakeLists.txt  tests.cpp
tests/containers/: tests.cpp
tests/ecs/: tests.cpp
tests/math/: angle_tests.hpp  matrix4x4_tests.hpp  quaternion_tests.hpp  tests.cpp  vector3_tests.hpp  vector4_tests.hpp
tests/reflection/: tests.cpp
(+1006 files in other folders)
